<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kfe_list_selector_background_transition_holo_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/draw2_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button"
        android:text="@string/draw_btn"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dolacz_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button"
        android:text="@string/dolacz_btn"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button_size_small"
        android:textStyle="bold" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button"
        android:text="@string/setting_btn"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/score_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button"
        android:text="@string/score_btn"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button"
        android:text="@string/btn_exit"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />

</LinearLayout>